<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Wise Navigation</string>
    <string name="account_creation_btn_txt">Account Creation</string>
    <string name="Workouts_Btn_Text">Workouts</string>
    <string name="SchedulingButtonText">Map</string>
    <string name="EventsButtonText">Events</string>
    <string name="AccountCreationPage">Account Creation</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="new_account_label">New Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="acct_verif_email_sent">An account verification email has been sent. Please click on the link in the email to enable your account.</string>
    <string name="password_requirements_list"><u>Password Requirements List</u></string>
    <string name="PasswordRequirements">Password Requirements:\n12-32 Characters\n\nContains at least:\n- 1 Uppercase letter\n- 1 Lowercase letter\n- 1 Special character\n- 1 Number</string>
    <string name="passwordConfMismatch">The passwords do not match.</string>
    <string name="blankFieldsError">One of the fields is blank.</string>
    <string name="ReferToPasswordReqs">Please follow the guidelines in the Password Requirements List.</string>
    <string name="login">Log in</string>
    <string name="title_activity_maps">Map</string>
    <string name="faculty_log_in">Faculty Log In</string>
    <string name="create_an_account"><u>Create An Account</u></string>
    <string name="confirm_account_link"><u>Confirm Account</u></string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_account">Confirm Account</string>
    <string name="main_activity_title">Wise Navigation</string>
    <string name="bulletin_board_search_title">Bulletin Board Search</string>
    <string name="title_activity_bulletin_board_g_u_i">Bulletin Board GUI</string>
    <string name="event_search_button">Event Search</string>
    <string name="location">Locations</string>
    <string name="title_activity_basic_login_functionality">BasicLoginFunctionality</string>
    <string name="account_does_not_exist">Account does not exist.</string>
    <string name="incorrect_confirmation_code">Incorrect confirmation code.</string>
    <string name="incorrect_password">Incorrect password.</string>
    <string name="error_in_input_for_email_or_password">Error in input for email or password.</string>
    <string name="invalid_email">Invalid email.</string>
    <string name="invalid_password">Invalid password.</string>
    <string name="this_account_has_not_yet_been_confirmed">This account has not yet been confirmed.</string>
    <string name="email_is_not_in_whitelist_if_you_have_multiple_faculty_email_addresses_please_try_a_different_one">Email is not in whitelist. If you have multiple faculty email addresses please try a different one.</string>
    <string name="account_already_exists">Account already exists.</string>
    <string name="send_email">Send email</string>
    <string name="set_new_password">Set New Password</string>
    <string name="reset_password"><u>Reset Password</u></string>

    <string-array name="Recurrence">
        <item>Does not recur</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>

    <string-array name="Locations">
        <item>Location</item>
        <item>David J. Prior Convocation Center</item>
        <item>Humphreys-Thomas Field House</item>
        <item>Carl Smith Stadium</item>
        <item>Ramseyer Press Box</item>
        <item>Culberston Hall</item>
        <item>College Relations/Napoleon Hill Foundation</item>
        <item>Commonwealth Hall</item>
        <item>Lila Vicars Smith House</item>
        <item>McCrary Hall</item>
        <item>Gilliam Center for the Arts</item>
        <item>Hunter J. Smith Dining Commons</item>
        <item>Thompson Hall</item>
        <item>Asbury Hall</item>
        <item>Martha Randolph Hall</item>
        <item>Crocket Hall (Admissions Office)</item>
        <item>Cantrell Hall</item>
        <item>Chapel of all Faiths</item>
        <item>Henson Hall</item>
        <item>Smiddy Hall</item>
        <item>C. Bascom Slemp Student Center</item>
        <item>Wyllie Hall</item>
        <item>UVA-Wise Library</item>
        <item>Zehmer Hall</item>
        <item>Darden Hall</item>
        <item>Leonard W. Sandridge Science Center</item>
        <item>Betty J. Gilliam Sculpture Garden</item>
        <item>Physical Plant</item>
        <item>Winston Ely Health and Wellness Center</item>
        <item>Bower-Sturgill Hall</item>
        <item>Stallard Field (Baseball)</item>
        <item>Fred B. Greear Gym and Swimming Pool</item>
        <item>Humphreys Tennis Complex</item>
        <item>Women\'s Softball Field</item>
        <item>Intramural Sports</item>
        <item>Observatory</item>
        <item>Resource Center</item>
        <item>Center for Teaching Excellence</item>
        <item>Wesley Foundation</item>
        <item>Alumni Hall</item>
    </string-array>


    <string-array name = "Location_number">
        <item>David J. Prior Convocation Center</item>
        <item>193</item>
        <item>Humphreys-Thomas Field House</item>
        <item>190</item>
        <item>Carl Smith Stadium</item>
        <item>270</item>
        <item>Ramseyer Press Box</item>
        <item>227</item>
        <item>Culberston Hall</item>
        <item>92</item>
        <item>College Relations/Napoleon Hill Foundation</item>
        <item>104</item>
        <item>Commonwealth Hall</item>
        <item>289</item>
        <item>Lila Vicars Smith House</item>
        <item>377</item>
        <item>McCrary Hall</item>
        <item>1</item>
        <item>Gilliam Center for the Arts</item>
        <item>130</item>
        <item>Hunter J. Smith Dining Commons</item>
        <item>132</item>
        <item>Thompson Hall</item>
        <item>135</item>
        <item>Asbury Hall</item>
        <item>139</item>
        <item>Martha Randolph Hall</item>
        <item>305</item>
        <item>Crocket Hall (Admissions Office)</item>
        <item>77</item>
        <item>Cantrell Hall</item>
        <item>308</item>
        <item>Chapel of all Faiths</item>
        <item>171</item>
        <item>Henson Hall</item>
        <item>143</item>
        <item>Smiddy Hall</item>
        <item>18</item>
        <item>C. Bascom Slemp Student Center</item>
        <item>56</item>
        <item>Wyllie Hall</item>
        <item>49</item>
        <item>UVA-Wise Library</item>
        <item>168</item>
        <item>Zehmer Hall</item>
        <item>317</item>
        <item>Darden Hall</item>
        <item>318</item>
        <item>Leonard W. Sandridge Science Center</item>
        <item>324</item>
        <item>Betty J. Gilliam Sculpture Garden</item>
        <item>319</item>
        <item>Physical Plant</item>
        <item>351</item>
        <item>Winston Ely Health and Wellness Center</item>
        <item>31</item>
        <item>Bower-Sturgill Hall</item>
        <item>35</item>
        <item>Stallard Field (Baseball)</item>
        <item>67</item>
        <item>Fred B. Greear Gym and Swimming Pool</item>
        <item>42</item>
        <item>Humphreys Tennis Complex</item>
        <item>65</item>
        <item>Women\'s Softball Field</item>
        <item>68</item>
        <item>Intramural Sports</item>
        <item>361</item>
        <item>Observatory</item>
        <item>374</item>
        <item>Resource Center</item>
        <item>409</item>
        <item>Center for Teaching Excellence</item>
        <item>403</item>
        <item>Wesley Foundation</item>
        <item>424</item>
        <item>Alumni Hall</item>
        <item>398</item>
    </string-array>



    <string-array name="Activites">
        <item> </item>
        <item>Workouts</item>
        <item>Events</item>
        <item>Event Search</item>
        <item>Navigate</item>>
        <item>AR</item>>
    </string-array>


</resources>