<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/WorkoutsButton"
        android:layout_width="196dp"
        android:layout_height="52dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="239dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="440dp"
        android:onClick="StartWorkout"
        android:text="@string/Workouts_Btn_Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/EventsButton"
        android:layout_width="196dp"
        android:layout_height="52dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="486dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="193dp"
        android:text="@string/EventsButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SchedulingButton"
        android:layout_width="196dp"
        android:layout_height="52dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="366dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="313dp"
        android:text="@string/SchedulingButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/AccountCreationButton"
        android:layout_width="196dp"
        android:layout_height="52dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="570dp"
        android:text="@string/account_creation_btn_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>