<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".AccountCreation"
    tools:ignore="LabelFor">

    <TextView
        android:id="@+id/EmailText"
        android:layout_width="95dp"
        android:layout_height="46dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="162dp"
        android:layout_marginEnd="217dp"
        android:layout_marginBottom="523dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PasswordText"
        android:layout_width="95dp"
        android:layout_height="46dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="282dp"
        android:layout_marginEnd="217dp"
        android:layout_marginBottom="403dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/NewConfirmPasswordText"
        android:layout_width="156dp"
        android:layout_height="45dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="397dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="289dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/confirm_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/CreateAcctButton"
        android:layout_width="197dp"
        android:layout_height="56dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="565dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="110dp"
        android:text="@string/create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/NewAcctPasswordBox"
        android:layout_width="252dp"
        android:layout_height="79dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="352dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/NewAcctEmailBox"
        android:layout_width="252dp"
        android:layout_height="79dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="183dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="469dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ConfirmHeader"
        android:layout_width="215dp"
        android:layout_height="49dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="618dp"
        android:text="@string/new_account_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ConfirmPasswordNewBox"
        android:layout_width="252dp"
        android:layout_height="70dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="245dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PasswordReqsLinkCreation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginTop="514dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="193dp"
        android:text="@string/password_requirements_list"
        android:textColor="#2196F3"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PasswordMismatchCreateError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="631dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="81dp"
        android:text="@string/passwordConfMismatch"
        android:textColor="#E91E1E"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/BlankFieldsCreateError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="629dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="78dp"
        android:text="@string/blankFieldsError"
        android:textColor="#E91E1E"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/MissingRequirementsCreateError"
        android:layout_width="312dp"
        android:layout_height="43dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="629dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="59dp"
        android:gravity="center"
        android:text="@string/ReferToPasswordReqs"
        android:textColor="#E91E1E"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/UnwhitelistedEmailCreateError"
        android:layout_width="404dp"
        android:layout_height="50dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="622dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="59dp"
        android:text="@string/email_is_not_in_whitelist_if_you_have_multiple_faculty_email_addresses_please_try_a_different_one"
        android:textAlignment="center"
        android:textColor="#E91E1E"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/AccountExistsCreateError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="629dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="78dp"
        android:text="@string/account_already_exists"
        android:textAlignment="center"
        android:textColor="#E91E1E"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>