<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".SetNewPasswordActivity">

    <TextView
        android:id="@+id/ResetPasswordText"
        android:layout_width="95dp"
        android:layout_height="46dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="162dp"
        android:layout_marginEnd="217dp"
        android:layout_marginBottom="523dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ConfirmResetPasswordText"
        android:layout_width="179dp"
        android:layout_height="43dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="282dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="406dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/confirm_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ConfirmResetCodeText"
        android:layout_width="156dp"
        android:layout_height="45dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="397dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="289dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/confirmation_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ConfirmResetPasswordBox"
        android:layout_width="252dp"
        android:layout_height="79dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="352dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ResetPasswordBox"
        android:layout_width="252dp"
        android:layout_height="79dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="183dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="469dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SetNewPasswordHeader"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="618dp"
        android:text="@string/set_new_password"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SetNewPasswordButton"
        android:layout_width="197dp"
        android:layout_height="56dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="565dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="110dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ResetCodeBox"
        android:layout_width="252dp"
        android:layout_height="70dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="245dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PasswordReqsLinkSetNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginTop="514dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="193dp"
        android:text="@string/password_requirements_list"
        android:textColor="#2196F3"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/BlankFieldSetNewError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="648dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="59dp"
        android:text="@string/blankFieldsError"
        android:textAlignment="center"
        android:textColor="#E91E1E"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PasswordMismatchSetNewError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginTop="648dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="59dp"
        android:text="@string/passwordConfMismatch"
        android:textAlignment="center"
        android:textColor="#E91E1E"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/CodeMismatchSetNewError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="648dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="59dp"
        android:text="@string/incorrect_confirmation_code"
        android:textAlignment="center"
        android:textColor="#E91E1E"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PasswordMissingReqsSetNewError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="627dp"
        android:layout_marginBottom="59dp"
        android:text="@string/ReferToPasswordReqs"
        android:textAlignment="center"
        android:textColor="#E91E1E"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>