<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".ResetPasswordActivity"
    tools:ignore="LabelFor">

    <Button
        android:id="@+id/SendEmailResetButton"
        android:layout_width="197dp"
        android:layout_height="56dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="565dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="110dp"
        android:text="@string/send_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EmailBoxReset"
        android:layout_width="252dp"
        android:layout_height="79dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="183dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="469dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/EmailText"
        android:layout_width="95dp"
        android:layout_height="46dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="162dp"
        android:layout_marginEnd="217dp"
        android:layout_marginBottom="523dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ResetHeader"
        android:layout_width="263dp"
        android:layout_height="59dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="608dp"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ResetAcctUnfoundError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="507dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="200dp"
        android:text="@string/account_does_not_exist"
        android:textAlignment="center"
        android:textColor="#E91E1E"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ResetAcctUnconfirmedError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="507dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="200dp"
        android:text="@string/this_account_has_not_yet_been_confirmed"
        android:textAlignment="center"
        android:textColor="#E91E1E"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ResetBlankFieldError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="507dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="200dp"
        android:text="@string/blankFieldsError"
        android:textAlignment="center"
        android:textColor="#E91E1E"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>